# jc303

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Gui.cpp  Gui.h  JC303.cpp  JC303.h  jc303-gui.jucer
src/JuceLibraryCode/: BinaryData.h
src/dsp/: GlobalDefinitions.h  GlobalFunctions.h  rosic_AcidSequencer.cpp  rosic_AnalogEnvelope.cpp  rosic_BiquadFilter.h  rosic_BlendOscillator.cpp  rosic_BlendOscillator.h  rosic_LeakyIntegrator.h  rosic_MipMappedWaveTable.h  rosic_NumberManipulations.h  rosic_RealFunctions.h
src/dsp/guitarml-byod/: CMakeLists.txt  pch.h
src/dsp/guitarml-byod/models/AcidPack/: BigMuff_V6_T3_S5.json  DigitechDF-7_TS9.json  LittleBigMuff_HighGainPedal.json  ProcoRatPedal_HighGain.json  TS7_modified_TS9Mode.json
src/dsp/guitarml-byod/models/AmpPack1/: 6505Plus_Red_DirectOut.json
src/dsp/guitarml-byod/models/AmpPack2/: BadCat50_HighGain_DIRECT.json  BadCat50_MedGain_DIRECT.json  BadCat50_MedGain_PREAMP.json  SoundCity50_LowGain_DIRECT.json  YamahaT50_HighGain-mid6_DIRECT.json
src/dsp/guitarml-byod/models/AmpPack3/: H&KBS200FL_LEAD_EdoardoNapoli.json
src/dsp/guitarml-byod/models/JC303/: AguilarAgro_Bright_Bass.json  AguilarAgro_Dark_Bass.json  BlackstarHT40_AmpClean.json  DumbleKit_HighG_DirectOut.json  ENGL_E430_Clean_EdoardoNapoli.json  ENGL_E645_Clean_EdoardoNapoli.json  ElCoyote_Trainwreck_Crunch.json  EthosLeadChan_GainKnob.json  Filmosound_with_cab.json  GoatPedal_HighGain.json  Ibanez808TubeScreamer.json  Jeckyl_and_Hyde_Distortion_DriveKnob.json  MesaMiniRec_HighGain_DirectOut.json  PorkLoinPedal_LowGain.json  PrinceOfToneClone_Dist_Knob.json  PrinceOfToneClone_OD_Knob.json  ShiftTwin_Clean2_PREAMP.json  ShiftTwin_StampedeDT_PREAMP.json  Sovtek50_MedGain_DIRECT.json  Splawn_OD_FractalFM3_HighGain.json
src/dsp/guitarml-byod/models/MetalAmpPack/: BassAmp_GainKnob.json  PRS-Archon_Flat_GainKnob.json
src/dsp/guitarml-byod/models/PedalPack1/: Bogner_EcstasyBlue_GainKnob.json  PlexiBreed_JTM_pedal.json  ProteinBlue_pedal_DriveKnob.json  RockmanAcoustic_Pedal.json  Supro_Bold_DriveKnob.json
src/dsp/guitarml-byod/models/PedalPack2/: 1981_DistortionPedal_Knob.json  Bogner_XTC_ Mini_GainKnob.json  Broadcast_Pedal_GainKnob.json  FatGeneral_Comp.json  Friedman_BEOD_Pedal_GainKnob.json  Jekyl_and_Hyde_OD_DriveKnob.json
src/dsp/guitarml-byod/models/PedalPack3/: PrinceOfToneClone_Boost_Knob.json
src/dsp/guitarml-byod/models/PedalPack4/: DOD_AmericanMetalEQ_Knob.json  DigitechDF-7_DS1.json  DigitechDF-7_MT2.json  EffectrodeBlackbirdCreamy_GainKnob.json  HustleDriveLP.json  HustleDriveLP_Knob.json  JoyoExtremeMetal.json  JoyoExtremeMetalBoostOn.json  WamplerThirtySomething15BoostON.json
src/dsp/guitarml-byod/models/Proteus_Tone_Packs/AmpPack1/: BlackstarHT40_AmpHighGain.json  DumbleKit_LowG_DirectOut.json  MatchlessSC30_Ch1_DirectOut.json  MesaIICplus_Drive8_5EQoff.json  Mesa_IICplus_DriveKnob_DirectOut.json  PrincetonAmp_Clean.json  RockmanXPR_HighGain.json
src/dsp/guitarml-byod/models/Proteus_Tone_Packs/AmpPack2/: BadCat50_HighGain_PREAMP.json  NeuralJohnClean_DirectOut.json  PeaveyBandit_Chan1_saturated.json  PeaveyBandit_Chan2_clean.json  ShiftTwin_Clean1_PREAMP.json  ShiftTwin_Demon_PREAMP.json  SoundCity50_ThroneTorcher_DIRECT.json  Sovtek50_Clean_DIRECT.json  Sovtek50_DodFX56B-2_DIRECT.json  Sovtek50_DodFX56B_DIRECT.json  Sovtek50_StampedeDT_DIRECT.json  Sovtek50_ThroneTorcher_DIRECT.json  YamahaT50_HighGain-mid4_DIRECT.json
src/dsp/guitarml-byod/models/Proteus_Tone_Packs/AmpPack3/: ENGL_Tube_Toner_E430.json  ElCoyote_Trainwreck_Clean.json  Fender_Bassman_JC.json  Gibson_EH-185.json  H&KBS200FL_CLEAN_EdoardoNapoli.json
src/dsp/guitarml-byod/models/Proteus_Tone_Packs/Keiths_DIY_Pedals/: BigMuff_V6_T6_S9.json  DC3_Ge_G10_T6_L9.json  DC3_Ge_G7_T5_L10.json  DC3_Si_G10_T6_L9.json  Klone_Ge_G4_T5_O6.json  Klone_Ge_G5_T8_O7.json  Klone_Ge_G9_T8_O6.json  Klone_SiGe_G6_T5_O7.json  Klone_SiGe_G9_T8_O6.json  TeaFuzz_Max.json
src/dsp/guitarml-byod/models/Proteus_Tone_Packs/MetalAmpPack/: Bass_Clean_GainKnob.json  Bass_Dirt_GainKnob.json  Bass_Rack_GainKnob.json  Djent_Amp_GainKnob.json  PRS_Archon_Camo-flat_GainKnob.json  recClean_GainKnob.json  (+5 more)
src/dsp/guitarml-byod/models/acid/: BigMuffWicker_on.json  DigitechDF-7_BigMuff.json  RatsbaneStandardV1.json
src/dsp/guitarml-byod/processors/: BaseProcessor.cpp  BaseProcessor.h  DCBlocker.h  JuceProcWrapper.h  ParameterHelpers.h
src/dsp/guitarml-byod/processors/drive/: GuitarMLAmp.cpp  GuitarMLAmp.h
src/dsp/guitarml-byod/processors/utility/: DCBlocker.h
src/dsp/neuralpi/: CMakeLists.txt  NeuralPi.cpp  NeuralPi.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h
src/dsp/open303/: GlobalFunctions.h  LICENSE  rosic_AcidPattern.h  rosic_AcidSequencer.h  rosic_AnalogEnvelope.h  rosic_BiquadFilter.cpp  rosic_Complex.cpp  rosic_Complex.h  rosic_DecayEnvelope.cpp  rosic_DecayEnvelope.h  rosic_EllipticQuarterBandFilter.h  rosic_FourierTransformerRadix2.cpp  rosic_FourierTransformerRadix2.h  rosic_FunctionTemplates.h  rosic_LeakyIntegrator.cpp  rosic_MidiNoteEvent.cpp  rosic_MidiNoteEvent.h  rosic_MipMappedWaveTable.cpp  rosic_NumberManipulations.h  rosic_OnePoleFilter.cpp  rosic_OnePoleFilter.h  rosic_Open303.cpp  rosic_Open303.h  rosic_RealFunctions.h  rosic_TeeBeeFilter.cpp  rosic_TeeBeeFilter.h
src/gui/: KnobLookAndFeel.h  ModKnobLookAndFeel.h  SwitchButton.h
src/gui/amadeus/: KnobLookAndFeel.h  SwitchButton.h
src/gui/amadeusp/: AcidSmile.h  CMakeLists.txt  FilterSelector.h  Gui.cpp  Gui.h  KnobLookAndFeel.h  OverdriveModelSelect.h  SwitchButton.h  SwitchLed.h  jc303-amadeusp-gui.jucer
src/gui/amadeusp/JuceLibraryCode/: BinaryData.cpp  BinaryData.h
src/gui/amadeusp/resources/: README.md
src/gui/amadeusp/resources/redesign/: README.md  positions-rotaries-switch.csv
src/gui/amadeusp/resources/src/: README.md
src/gui/midilab/: CMakeLists.txt  Gui.cpp  Gui.h  KnobLookAndFeel.h  ModKnobLookAndFeel.h  SwitchButton.h  jc303-gui.jucer  jc303-midilab-gui.jucer
src/gui/midilab/JuceLibraryCode/: JuceHeader.h
src/gui/resources/: jc303-ui.xcf
src/ui/: BinaryData.h  KnobLookAndFeel.h
(+60 files in other folders)
